--- a/pom.xml
+++ b/pom.xml
@@ -161,11 +161,11 @@
 			<classifier>module</classifier>
 		</dependency>
 
-		<dependency>
-			<groupId>com.github.russ-p</groupId>
-			<artifactId>ico4jfx</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.github.russ-p</groupId>-->
+<!--			<artifactId>ico4jfx</artifactId>-->
+<!--			<version>1.0.0-SNAPSHOT</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>com.samskivert</groupId>
